confirm message added

--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="home.html" class="logo">Logo</a>
+        <a href="home.html" class="logo">Smart API Manager</a>
         <nav class="navbar">
             <a href="home.html">Home</a>
             <a href="json.html">Json</a>
