--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,26 @@
         </ul>
         <button id="add-project-btn">Add Project</button>
     </div>
+
+    <!--Modal Structure-->
+
+    <div id="add-project-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Add Project</h2>
+            <label for="project-name">Project Name:</label>
+            <input type="text" id="project-name" placeholder="Enter project name">
+            <label for="project-description">Project Description:</label>
+            <textarea id="project-description" placeholder="Enter project description"></textarea>
+            <label for="project-file">Project File:</label>
+            <input type="file" id="project-file">
+            <label for="project-date">Date:</label>
+            <input type="date" id="project-date">
+            <button id="save-project-btn">Save Project</button>
+
+        </div>
+    </div>
+
     <script src="js/scripts.js"></script>
 </body>
 </html>
