--- a/json.html
+++ b/json.html
@@ -3,12 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>JSON Manager</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>About Page</h1>
-    <p>Welcome to the about page!</p>
+    <header class="header">
+        <a href="home.html" class="logo">Smart API Manager</a>
+        <nav class="navbar">
+            <a href="home.html">Home</a>
+            <a href="#">Json</a>
+            <a href="projects.html">Projects</a>
+            <button class="btnLogin-popup">Login</button>
+
+        </nav>
+    </header>
+
+    <div id="json-container" class="container">
+        <button id="new-json-btn">New</button>
+        <button id="search-btn">Search</button>
+        <input type="text" id="search-json" placeholder="Search JSON by name...">
+
+
+        <div id="json-form">
+            <label for="json-name">JSON Name:</label>
+            <input type="text" id="json-name">
+
+            <label for="request-url">Request URL</label>
+            <input type="text" id="request-url">
+
+            <label for="content">Content:</label>
+            <textarea id="content"></textarea>
+
+            <label for="related-table">Related Table:</label>
+            <input type="text", id="related-table">
+
+            <label for="sent-pattern">Sent Pattern:</label>
+            <textarea id="sent-pattern" class="editor"></textarea>
+
+            <label for="received-pattern">Received Pattern:</label>
+            <textarea id="received-pattern" class="editor"></textarea>
+
+
+            <button id="save-btn">Save</button>
+    
+
+        </div>
+
+    </div>
+
     <script src="js/scripts.js"></script>
 </body>
 </html>
