--- a/json.html
+++ b/json.html
@@ -19,12 +19,16 @@
     </header>
 
     <div id="json-container" class="container">
+        <div class="left-column">
         <button id="new-json-btn">New</button>
-        <button id="search-btn">Search</button>
         <input type="text" id="search-json" placeholder="Search JSON by name...">
 
 
-        <div id="json-form">
+        <ul id="json-list"></ul>
+        </div>
+        <div class="right-column">
+
+         <div id="json-form">
             <label for="json-name">JSON Name:</label>
             <input type="text" id="json-name">
 
@@ -45,6 +49,7 @@
 
 
             <button id="save-btn">Save</button>
+        </div>
     
 
         </div>
