--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <a href="#" class="logo">Smart API Manager</a>
         <nav class="navbar">
             <a href="#">Home</a>
-            <a href="#">Json</a>
+            <a href="json.html">Json</a>
             <a href="projects.html">Projects</a>
             <button class="btnLogin-popup">Login</button>
         </nav>
