--- a/json.html
+++ b/json.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Manager</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/python/python.min.js"></script>
+    <!-- İhtiyacınız olan diğer diller için ek scriptler buraya -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -42,9 +47,20 @@
             <input type="text", id="related-table">
 
             <label for="sent-pattern">Sent Pattern:</label>
-            <textarea id="sent-pattern" class="editor"></textarea>
+            <select  id="sent-pattern-language">
+                <option value="javascript">JavaScript</option>
+                <option value="python">Python</option>
+                <!--Diğer diller buraya eklenebilir-->
+            </select>
+            <textarea  id="sent-pattern" class="editor"></textarea>
 
             <label for="received-pattern">Received Pattern:</label>
+            <select id="received-pattern-language">
+                <option value="javascript">JavaScript</option>
+                <option value="python">Python</option>
+                <!--Diğer diller buraya eklenebilir-->
+
+            </select>
             <textarea id="received-pattern" class="editor"></textarea>
 
 
