--- a/json.html
+++ b/json.html
@@ -46,6 +46,9 @@
             <label for="related-table">Related Table:</label>
             <input type="text", id="related-table">
 
+            <label for="date">Date:</label>
+            <input type="date" id="date">
+
             <label for="sent-pattern">Sent Pattern:</label>
             <select  id="sent-pattern-language">
                 <option value="javascript">JavaScript</option>
