update add button

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                         <h2>Login</h2>
                         <p>Please login to use the platform</p>
                     </div>
-                    <form action="#">
+                    <form class="login-form" action="#">
                         <div class="input-box">
                             <span class="icon"><i class='bx bxs-envelope'></i></span>
                             <input type="email" required>
@@ -59,7 +59,7 @@
                         <h2>Registration</h2>
                         <p>Please provide the following to verify your identity</p>
                     </div>
-                    <form action="#">
+                    <form class="register-form" action="#">
                         <div class="input-box">
                             <span class="icon"><i class='bx bxs-user'></i></span>
                             <input type="text" required>
