--- a/projects.html
+++ b/projects.html
@@ -42,11 +42,15 @@
     </div>
 
     <!--Project Details Modal-->
-    <div id="project-detail-modal" class="modal">
+    <div id="project-details-modal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2>Project Details</h2>
-            <p></p>
+            <p><strong>Project Name:</strong><span id="detail-project-name"></span></p>
+            <p><strong>Description:</strong><span id="detail-project-description"></span></p>
+            <p><strong>Date:</strong><span id="detail-project-date"></span></p>
+            <p><strong>File:</strong><span id="detail-project-file"></span></p>
+            
 
 
         </div>
