--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,25 @@
 
         </div>
     </div>
+    
+    <!--Edit Project Modal-->
+    <div id="edit-project-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-edit">&times;</span>
+            <h2>Edit Project</h2>
+            <label for="edit-project-name">Project Name:</label>
+            <input type="text" id="edit-project-name" placeholder="Enter project name">
+            <label for="edit-project-description">Project Description:</label>
+            <textarea id="edit-project-description" placeholder="Enter project description"></textarea>
+            <label for="edit-project-file">Project File:</label>
+            <input type="file" id="edit-project-file">
+            <label for="edit-project-date">Date:</label>
+            <input type="date" id="edit-project-date">
+            <button id="update-project-btn">Update Project</button>
+
+        </div>
+
+    </div>
 
     <!--Project Details Modal-->
     <div id="project-details-modal" class="modal">
