--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
 </head>
 <body>
-    <header class="header">
+   <!-- <header class="header">
         <div class="header-content">
             <a href="home.html" class="logo">Smart API Manager</a>
         </div>
-    </header>
-    <h1>Projects</h1>
+    </header>-->
+    <h1>PROJECT PAGE</h1>
     <div class="container">
         <input type="text" id="filter" placeholder="Search projects...">
         <ul id="project-list">
@@ -65,6 +65,9 @@
             <p><strong>File:</strong><span id="detail-project-file"></span></p>
         </div>
     </div>
+
+    
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/mode/javascript/javascript.min.js"></script>
     <script src="js/scripts.js"></script>
