update login form

--- a/json.html
+++ b/json.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON Manager</title>
+    <title>JSON Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <!--<header class="header">
+<body class="json-page">
+    <header class="header">
         <div class="header-content">
             <a href="home.html" class="logo">Smart API Manager</a>
         </div>
-    </header>-->
+    </header>
 
-    <h1>JSON PAGE</h1>
+    <h1>JSONS</h1>
 
     <div id="project-name-container" class="project-name-container"></div>
        
