--- a/home.html
+++ b/home.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON PDF's</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
 </head>
-<body>
+<body class="home-page">
     <header class="header">
         <div class="header-content">
             <a href="home.html" class="logo">Smart API Manager</a>
@@ -95,9 +95,9 @@
         <div class="footer-content">
             <p>&copy; 2024 Smart API Manager. All rights reserved.</p>
             <ul class="socials">
-                <li><a href="#"><i class='bx bxl-facebook'></i></a></li>
-                <li><a href="#"><i class='bx bxl-twitter'></i></a></li>
-                <li><a href="#"><i class='bx bxl-linkedin'></i></a></li>
+                <li><a href="#">Facebook<i class='bx bxl-facebook'></i></a></li>
+                <li><a href="#">Twitter<i class='bx bxl-twitter'></i></a></li>
+                <li><a href="#">Linked<i class='bx bxl-linkedin'></i></a></li>
             </ul>
         </div>
     </footer>
