--- a/projects.html
+++ b/projects.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
 </head>
-<body>
-   <!-- <header class="header">
+<body class="projects-page">
+    <header class="header">
         <div class="header-content">
             <a href="home.html" class="logo">Smart API Manager</a>
         </div>
-    </header>-->
-    <h1>PROJECT PAGE</h1>
+    </header>
+    <h1>PROJECTS</h1>
     <div class="container">
         <input type="text" id="filter" placeholder="Search projects...">
         <ul id="project-list">
