--- a/home.html
+++ b/home.html
@@ -46,7 +46,8 @@
                             <label><input type="checkbox"> Remember me</label>
                             <a href="#">Forgot password?</a>
                         </div>
-                        <button type="submit" class="btn">Login</button>
+                        <a href="projects.html" class="button-link">Login</a>
+
                         <div class="logreg-link">
                             <p>Don't have an account?
                                 <a href="#" class="register-link">Register</a>
