--- a/json.html
+++ b/json.html
@@ -76,7 +76,9 @@
                 </div>
                 <div class="button-container">
                     <button id="save-btn">Save</button>
-                    <button id="back-to-projects-btn">Back to Projects</button>
+                    <a href="projects.html" class="button-link" id="back-to-projects-link">Back to Projects</a>
+
+
                 </div>
             </div>
             
